[package]
name = "ue_rec_deps_seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.1", package = "gtk4" }
relm4 = "0.4.4"
relm4-macros = "0.4.4"
relm4-components = "0.4.4"

tracker = "0.1.1"
native-dialog = "0.6.3"

anyhow = "1.0.56"
log = "0.4.16"
pretty_env_logger = "0.4.0"

itertools = "0.10.3"

open = "2.1.1"